# langchain-crash-course-o

./: pyproject.toml
1_chat_models/: 1_chat_model_basic.py
