[project]
name = "langchain-crash-course"
version = "0.1.0"
requires-python = ">=3.10.0,<3.12"
description = "Everything you need to know to get started with LangChain"
readme = "README.md"
authors = [{name = "bhancock_ai", email = "brandon@brandonhancock.io"}]
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=0.5.9",
    "firecrawl-py>=1.2.4",
    "firestore>=0.0.8",
    "langchain-anthropic>=0.2.1",
    "langchain-community>=0.3.1",
    "langchain-google-firestore>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "langchain-ollama>=0.2.0",
    "langchain-openai>=0.2.0",
    "langchain>=0.3.1",
    "langchainhub>=0.1.21",
    "pyright>=1.1.382.post0",
    "python-dotenv>=1.0.1",
    "ruff>=0.6.7",
    "sentence-transformers>=3.1.1",
    "tavily-python>=0.5.0",
    "tiktoken>=0.7.0",
    "wikipedia>=1.4.0",
]
